Fix Part 7: 公式モジュールの説明に集中（自分のリポジトリへの参照を削除）

--- a/docs-site/docs/08_管理グループとポリシー.md
+++ b/docs-site/docs/08_管理グループとポリシー.md
@@ -686,91 +686,184 @@ https://github.com/Azure/terraform-azurerm-avm-ptn-alz
 ここからは公式のモジュールを開きながら見ていきましょう。こんな感じ↓
 ![モジュールとドキュメントを並べて見る](img/スクリーンショット4.png)
 
-このモジュールがどうやって管理グループとポリシーを作成しているのか、実際のコードを見ながら完全に理解していきましょう。
+このモジュールがどうやって管理グループとポリシーを作成しているのか、実際のコードを見ながら理解していきましょう。
 
-### モジュールのファイル構成
+### 公式モジュールの全体像
+
+まず、このモジュールが何をするのか、大きな流れを理解しましょう。
+
+**やっていること**:
 
 ```
-Azure/terraform-azurerm-avm-ptn-alz/
-├── main.tf                           # ALZ Providerからデータ取得
-├── locals.tf                         # データ変換処理
-├── main.management_groups.tf         # 管理グループ作成（レベル0-6）
-├── main.policy_definitions.tf        # ポリシー定義作成
-├── main.policy_set_definitions.tf    # ポリシーセット定義作成
-├── main.policy_assignments.tf        # ポリシー割り当て作成
-├── main.policy_role_assignments.tf   # ポリシーロール割り当て作成
-├── main.role_definitions.tf          # カスタムロール定義作成
-├── main.role_assignments.tf          # 管理グループロール割り当て作成
-├── variables.tf                      # 入力変数定義
-└── outputs.tf                        # 出力値定義
+1. YAMLファイルを読み込む（lib/フォルダ）
+   ↓ 「管理グループalzを作る」「ポリシーAを割り当てる」みたいな設定が入ってる
+   
+2. データを整理する（locals.tf）
+   ↓ 「Level 0の管理グループはこれ」「ポリシー定義はこれ」みたいにグループ分け
+   
+3. 管理グループを作る（main.management_groups.tf）
+   ↓ Level 0 → Level 1 → Level 2... の順番で作成
+   
+4. ポリシー定義を作る（main.policy_definitions.tf）
+   ↓ 「Classic VMを禁止」みたいなルールを定義
+   
+5. ポリシーセット定義を作る（main.policy_set_definitions.tf）
+   ↓ 複数のポリシーをまとめたもの
+   
+6. ポリシーを割り当てる（main.policy_assignments.tf）
+   ↓ 「alz管理グループにこのポリシーを適用」
+   
+7. 権限を付与する（main.policy_role_assignments.tf）
+   ↓ ポリシーが動くための権限を設定
 ```
 
-### ステップ1: データソースによるアーキテクチャ読み込み
+### ステップ1: YAMLファイルを読み込む
 
-まず最初に、YAMLファイルを読み込んで処理します。
+**目的**: lib/フォルダのYAMLファイルを読み込んで、「どんな管理グループを作るか」「どんなポリシーを適用するか」を把握する。
 
-**ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/main.tf`
+**公式モジュールのファイル**: `main.tf`
 
-```hcl title="main.tf"
+
+```hcl title="Azure/terraform-azurerm-avm-ptn-alz/main.tf"
 data "alz_architecture" "this" {
   name                         = var.architecture_name
   root_management_group_id     = var.parent_resource_id
   location                     = var.location
   policy_assignments_to_modify = var.policy_assignments_to_modify
   policy_default_values        = var.policy_default_values
-
-  override_policy_definition_parameter_assign_permissions_set   = var.override_policy_definition_parameter_assign_permissions_set
-  override_policy_definition_parameter_assign_permissions_unset = var.override_policy_definition_parameter_assign_permissions_unset
 }
 ```
 
-**このデータソースが何をしているか**:
+**このコードが実際に何をするのか**:
 
-1. **YAMLファイルの読み込み**
-   - `lib/architecture_definitions/alz_custom.alz_architecture_definition.yaml` を読み込む
-   - `lib/archetype_definitions/*.yaml` を読み込む
+`data "alz_architecture"` は、ALZ Providerが提供する特殊なデータソースです。
 
-2. **Azure ALZ Libraryの読み込み**
-   - 公式のALZポリシー定義を読み込む
-   - アーキタイプごとのポリシー割り当てを読み込む
+!!! info "前提: ALZ Providerの設定が必要"
+    このデータソースを使うには、事前にALZ Providerの設定が必要です（このリポジトリでは[terraform.tf](terraform.tf#L24-L31)で設定済み）。
+    プロバイダー設定で`library_references`に`${path.root}/lib`を指定することで、YAMLファイルの場所を教えています。
 
-3. **データの統合**
-   - カスタム定義と公式定義をマージ
-   - `policy_assignments_to_modify` でポリシーパラメータを上書き
-   - `policy_default_values` でデフォルト値を設定
+これを使うと：
 
-**ALZ Provider**とは？
+1. **プロバイダー設定で指定したYAMLを自動で読む**
 
-このモジュールは、Terraformの `alz` プロバイダーを使用しています。
+2. **name で指定したアーキテクチャを探す**
+   ```hcl
+   name = var.architecture_name  # "alz_custom"
+   ```
+   - `lib/architecture_definitions/alz_custom.alz_architecture_definition.yaml` を読む
 
-```hcl
-provider "alz" {
-  library_references = [
+3. **YAMLの内容を解析する**
+   
+   **alz_custom.alz_architecture_definition.yaml の中身**:
+   ```yaml
+   name: alz_custom
+   management_groups:
+     - id: alz
+       display_name: Azure Landing Zones
+       parent_id: root
+       archetypes:
+         - root_custom
+     - id: platform
+       display_name: Platform
+       parent_id: alz
+       archetypes:
+         - platform_custom
+     - id: management
+       display_name: Management
+       parent_id: platform
+       archetypes:
+         - management_custom
+     # ...
+   ```
+
+4. **アーキタイプ定義も読み込む**
+   
+   各管理グループの `archetypes: [root_custom]` を見て、`lib/archetype_definitions/root_custom.alz_archetype_override.yaml` も読む：
+   
+   ```yaml
+   name: root_custom
+   base_archetype: root
+   policy_assignments_to_add: []
+   policy_assignments_to_remove: []
+   # ...
+   ```
+
+5. **公式ライブラリのポリシー定義も読み込む**
+   
+   GitHub上の公式ライブラリから、`Deny-Classic-Resources`とか`Deploy-MDFC-Config`とかのポリシー定義を全部読み込む。
+
+6. **カスタム設定を適用**
+   ```hcl
+   policy_assignments_to_modify = var.policy_assignments_to_modify
+   policy_default_values        = var.policy_default_values
+   ```
+   - `policy_assignments_to_modify`: 「このポリシーのパラメータを変更」
+   - `policy_default_values`: 「Log AnalyticsのIDはこれ」みたいなデフォルト値
+
+#### 結果、何が手に入るか
+
+`data.alz_architecture.this` という変数に、全部の情報が入ります：
+
+```
+data.alz_architecture.this = {
+  management_groups = [
     {
-      path = "platform/alz",
-      ref  = "2025.09.0"
+      id           = "alz"
+      level        = 0
+      parent_id    = "root"
+      display_name = "Azure Landing Zones"
+      archetypes   = ["root_custom"]
+      policy_definitions = {
+        "Deny-Classic-Resources" = "{ JSON形式のポリシー定義 }"
+        "Deny-Subnet-Without-Nsg" = "{ JSON形式のポリシー定義 }"
+        # ... 数十個
+      }
+      policy_assignments = {
+        "Deploy-MDFC-Config" = "{ JSON形式のポリシー割り当て }"
+        # ... 数十個
+      }
     },
     {
-      custom_url = "${path.root}/lib"
-    }
+      id           = "platform"
+      level        = 1
+      parent_id    = "alz"
+      display_name = "Platform"
+      archetypes   = ["platform_custom"]
+      policy_definitions = { ... }
+      policy_assignments = { ... }
+    },
+    # ... 全管理グループ
   ]
 }
 ```
 
-- **path**: GitHub上の公式ALZライブラリ（https://github.com/Azure/Azure-Landing-Zones-Library）
-- **ref**: ライブラリのバージョンタグ
-- **custom_url**: ローカルのカスタムライブラリ
+**つまり**:
 
-### ステップ2: データ変換（locals.tf）
+- `data "alz_architecture"` は魔法のデータソース
+- 使うだけで、ALZ Providerが勝手にYAMLを全部読んでくれる
+- 読み込んだ結果が `data.alz_architecture.this` に全部入る
+- あとはこれを使ってリソースを作っていく
 
-データソースから取得した生データを、Terraformリソースで使える形式に変換します。
+**なぜYAML読み込みコードが見えないのか**:
+
+`data "alz_architecture"` の内部処理は、ALZ Provider（Go言語で書かれたプログラム）の中に隠れています。Terraformのコードには現れません。
+
+これは、`azurerm_resource_group` を使うと勝手にAzure APIを呼んでくれるのと同じ仕組みです。内部の処理は見えないけど、使うだけで動く。
+```
+
+### ステップ2: データを整理する（管理グループ編）
+
+**目的**: 読み込んだデータを、Terraformリソースで使いやすい形に整理する。
 
 **ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/locals.tf`
 
-#### 管理グループの変換
+**問題**: 管理グループには親子関係があるので、親を先に作る必要がある。でも、データソースから取得したデータは順番がバラバラ。
+
+**解決策**: レベル別に分ける。
 
 ```hcl title="locals.tf（管理グループ）"
 locals {
+  # まず全管理グループをマップに変換
   management_groups = { for v in data.alz_architecture.this.management_groups : v.id => {
     id           = v.id
     level        = v.level
@@ -778,31 +871,90 @@ locals {
     display_name = v.display_name
     parent_id    = v.parent_id
   } }
+  
+  # Level 0だけ抽出
   management_groups_level_0 = { for k, v in local.management_groups : k => v if v.level == 0 && !v.exists }
+  
+  # Level 1だけ抽出
   management_groups_level_1 = { for k, v in local.management_groups : k => v if v.level == 1 && !v.exists }
-  management_groups_level_2 = { for k, v in local.management_groups : k => v if v.level == 2 && !v.exists }
-  management_groups_level_3 = { for k, v in local.management_groups : k => v if v.level == 3 && !v.exists }
-  management_groups_level_4 = { for k, v in local.management_groups : k => v if v.level == 4 && !v.exists }
-  management_groups_level_5 = { for k, v in local.management_groups : k => v if v.level == 5 && !v.exists }
-  management_groups_level_6 = { for k, v in local.management_groups : k => v if v.level == 6 && !v.exists }
+  
+  # Level 2-6も同様...
 }
 ```
 
-**なぜレベル別に分けるのか？**
+**なぜこうするのか**:
 
-管理グループには親子関係があるので、親を先に作成する必要があります。
+管理グループの階層はこうなってる：
 
 ```
-Level 0: alz（ルート）
-  ├─ Level 1: platform, landingzones, sandbox
-  │   ├─ Level 2: management, connectivity, identity
-  │   └─ Level 2: corp, online
+Level 0: alz
+  ├─ Level 1: platform
+  │   ├─ Level 2: management
+  │   ├─ Level 2: connectivity
+  │   └─ Level 2: identity
+  └─ Level 1: landingzones
+      ├─ Level 2: corp
+      └─ Level 2: online
 ```
 
-依存関係の例：
-- Level 0を作成 → Level 1を作成 → Level 2を作成...
+Level 1を作るには、Level 0（親）が先に存在してないとダメ。だから、レベル別に分けて、順番に作る。
 
-#### ポリシー定義の変換
+**具体例**:
+
+```hcl
+# 元のデータ（順番バラバラ）
+data.alz_architecture.this.management_groups = [
+  { id = "management", level = 2, ... },    # Level 2
+  { id = "alz", level = 0, ... },           # Level 0
+  { id = "platform", level = 1, ... },      # Level 1
+]
+
+# 整理後
+local.management_groups_level_0 = {
+  "alz" = { id = "alz", level = 0, ... }
+}
+local.management_groups_level_1 = {
+  "platform" = { id = "platform", level = 1, ... }
+}
+local.management_groups_level_2 = {
+  "management" = { id = "management", level = 2, ... }
+}
+```
+
+これで、Level 0 → Level 1 → Level 2 の順に作れる。
+
+```
+これで、Level 0 → Level 1 → Level 2 の順に作れる。
+
+### ステップ3: データを整理する（ポリシー定義編）
+
+**目的**: ポリシー定義を、作成しやすい形に変換する。
+
+**ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/locals.tf`
+
+**問題**: データソースから取得したポリシー定義は、管理グループごとに入れ子になってる。
+
+```
+data.alz_architecture.this.management_groups = [
+  {
+    id = "alz"
+    policy_definitions = {
+      "Deny-Classic-Resources" = "{ JSON }",
+      "Deny-Subnet-Without-Nsg" = "{ JSON }",
+      ...
+    }
+  },
+  {
+    id = "platform"
+    policy_definitions = {
+      "Deny-Public-IP" = "{ JSON }",
+      ...
+    }
+  }
+]
+```
+
+**解決策**: フラットなマップに変換する。
 
 ```hcl title="locals.tf（ポリシー定義）"
 locals {
@@ -819,103 +971,90 @@ locals {
 }
 ```
 
-**この処理が何をしているか**:
+**このコードを分解して理解する**:
 
-1. **入れ子ループで展開**
-   - 各管理グループ (`mg`) をループ
-   - 各管理グループ内のポリシー定義 (`pdname`, `pd`) をループ
+**ステップ1**: 各管理グループをループ
 
-2. **JSON文字列をオブジェクトに変換**
-   - `jsondecode(pd)`: JSON文字列をTerraformオブジェクトに変換
-
-3. **キーを生成**
-   - `"${pdval.mg}/${pdval.key}"`: 例: `"alz/Deny-Classic-Resources"`
-   - 管理グループID + ポリシー定義名で一意のキーを作成
-
-**例：実際のデータ構造**
-
+```hcl
+for mg in data.alz_architecture.this.management_groups : [
+  # mg = { id = "alz", policy_definitions = {...}, ... }
+]
 ```
-{
-  "alz/Deny-Classic-Resources" = {
-    key = "Deny-Classic-Resources"
-    definition = {
-      name = "Deny-Classic-Resources"
-      properties = {
-        displayName = "Deny the deployment of classic resources"
-        policyType = "Custom"
-        mode = "All"
-        ...
+
+**ステップ2**: 各管理グループ内のポリシー定義をループ
+
+```hcl
+for pdname, pd in mg.policy_definitions : {
+  key        = pdname          # "Deny-Classic-Resources"
+  definition = jsondecode(pd)  # JSON文字列をオブジェクトに変換
+  mg         = mg.id           # "alz"
+}
+```
+
+**なぜjsondecode()が必要か**: ポリシー定義はJSON文字列で保存されてるので、Terraformで使えるオブジェクトに変換する。
+
+**ステップ3**: flatten()で一次元配列に
+
+```hcl
+flatten([...])  # 入れ子の配列を平らにする
+```
+
+**ステップ4**: キーを生成してマップに
+
+```hcl
+"${pdval.mg}/${pdval.key}" => pdval
+# 例: "alz/Deny-Classic-Resources" => { key = "Deny-Classic-Resources", ... }
+```
+
+**なぜこの形式にするのか**: 同じ名前のポリシーが複数の管理グループにあるかもしれないから、「管理グループID/ポリシー名」で一意にする。
+
+**変換前と変換後の比較**:
+
+=== "変換前（入れ子）"
+
+    ```
+    management_groups = [
+      {
+        id = "alz"
+        policy_definitions = {
+          "Deny-Classic-Resources" = "{ JSON }"
+        }
+      },
+      {
+        id = "platform"
+        policy_definitions = {
+          "Deny-Public-IP" = "{ JSON }"
+        }
+      }
+    ]
+    ```
+
+=== "変換後（フラット）"
+
+    ```
+    policy_definitions = {
+      "alz/Deny-Classic-Resources" = {
+        key        = "Deny-Classic-Resources"
+        definition = { name = "...", properties = {...} }
+        mg         = "alz"
+      }
+      "platform/Deny-Public-IP" = {
+        key        = "Deny-Public-IP"
+        definition = { name = "...", properties = {...} }
+        mg         = "platform"
       }
     }
-    mg = "alz"
-  }
-}
-```
+    ```
 
-#### ポリシーセット定義の変換
+これで、`for_each = local.policy_definitions` でループして作成できる。
 
-```hcl title="locals.tf（ポリシーセット定義）"
-locals {
-  policy_set_definitions = {
-    for psdval in flatten([
-      for mg in data.alz_architecture.this.management_groups : [
-        for psdname, psd in mg.policy_set_definitions : {
-          key            = psdname
-          set_definition = jsondecode(psd)
-          mg             = mg.id
-        }
-      ]
-  ]) : "${psdval.mg}/${psdval.key}" => psdval }
-}
-```
+### ステップ4: 管理グループを作成する
 
-ポリシーセット定義（Policy Initiative）は、複数のポリシー定義をまとめたものです。
-
-**例：Enforce-Encryption-CMK**
-
-このポリシーセットは、複数のリソースタイプで顧客管理キー（CMK）暗号化を強制するポリシーをまとめています。
-
-#### ポリシー割り当ての変換
-
-```hcl title="locals.tf（ポリシー割り当て）"
-locals {
-  policy_assignments = {
-    for paval in flatten([
-      for mg in data.alz_architecture.this.management_groups : [
-        for paname, pa in mg.policy_assignments : {
-          key        = paname
-          assignment = jsondecode(pa)
-          mg         = mg.id
-        }
-      ]
-  ]) : "${paval.mg}/${paval.key}" => paval }
-  
-  policy_assignments_final = {
-    for k, v in local.policy_assignments : k => {
-      mg         = v.mg
-      assignment = merge(v.assignment, local.policy_assignments_properties_final[k])
-    }
-  }
-  
-  policy_assignments_properties_final = {
-    for k, v in local.policy_assignments : k => {
-      properties = merge(v.assignment.properties, local.policy_assignment_non_compliance_messages[k])
-    }
-  }
-}
-```
-
-**この処理の流れ**:
-
-1. `policy_assignments`: 基本的な変換
-2. `policy_assignments_final`: non-compliance messagesを追加
-3. `policy_assignments_properties_final`: propertiesをマージ
-
-### ステップ3: 管理グループの作成
-
-レベルごとに順番に作成していきます。
+**目的**: 実際にAzureに管理グループを作成する。
 
 **ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/main.management_groups.tf`
+
+**なぜレベルごとに分けて作るのか**: 親がいないと子は作れないから。
 
 ```hcl title="main.management_groups.tf（Level 0）"
 resource "azapi_resource" "management_groups_level_0" {
@@ -934,74 +1073,93 @@ resource "azapi_resource" "management_groups_level_0" {
       displayName = each.value.display_name
     }
   }
-  create_headers = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-  delete_headers = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-  read_headers   = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
   
-  replace_triggers_external_values = [
-    each.value.parent_id,
-  ]
-  response_export_values = []
-  
-  retry = var.retries.management_groups.error_message_regex != null ? {
-    error_message_regex  = var.retries.management_groups.error_message_regex
-    interval_seconds     = lookup(var.retries.management_groups, "interval_seconds", null)
-    max_interval_seconds = lookup(var.retries.management_groups, "max_interval_seconds", null)
-    multiplier           = lookup(var.retries.management_groups, "multiplier", null)
-    randomization_factor = lookup(var.retries.management_groups, "randomization_factor", null)
-  } : null
-  
-  schema_validation_enabled = var.schema_validation_enabled.management_groups
-  update_headers            = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-
-  timeouts {
-    create = var.timeouts.management_group.create
-    delete = var.timeouts.management_group.delete
-    read   = var.timeouts.management_group.read
-    update = var.timeouts.management_group.update
-  }
-
   depends_on = [terraform_data.management_groups_dependencies]
 }
 ```
 
-**重要なポイント**:
+**このコードを詳しく見る**:
 
-1. **azapi_resourceの使用**
-   - AzureRMプロバイダーではなく、AzAPIプロバイダーを使用
-   - より柔軟で、リトライ機能が組み込まれている
+**for_each**: Level 0の管理グループだけループ
 
-2. **retry設定**
-   - Azure APIは一時的なエラーを返すことがある
-   - 自動リトライで対処
+```hcl
+for_each = local.management_groups_level_0
+# 例: { "alz" = { id = "alz", display_name = "Azure Landing Zones", ... } }
+```
 
-3. **replace_triggers_external_values**
-   - `parent_id`が変更されたら、管理グループを再作成
-   - 親子関係の変更を検出
+**name**: 管理グループのID
 
-4. **depends_on**
-   - Level 0 → Level 1 → Level 2の順に作成
-   - `depends_on = [azapi_resource.management_groups_level_0]`
+```hcl
+name = each.value.id  # "alz"
+```
 
-**Level 1-6も同様の構造**:
+**type**: Azure APIのエンドポイント
+
+```hcl
+type = "Microsoft.Management/managementGroups@2023-04-01"
+# これでAzure APIに「管理グループを作って」とリクエストする
+```
+
+**body**: 管理グループの設定
+
+```hcl
+body = {
+  properties = {
+    details = {
+      parent = {
+        id = "/providers/Microsoft.Management/managementGroups/${each.value.parent_id}"
+        # 例: "/providers/Microsoft.Management/managementGroups/root"
+      }
+    }
+    displayName = each.value.display_name  # "Azure Landing Zones"
+  }
+}
+```
+
+**depends_on**: 他のリソースが作成されてから実行
+
+```hcl
+depends_on = [terraform_data.management_groups_dependencies]
+# management_resources、hub_and_spoke_vnet、virtual_wan が先に作られる
+```
+
+**なぜazapi_resourceを使うのか**:
+
+普通の`azurerm_management_group`リソースじゃなくて、`azapi_resource`を使ってる理由：
+
+1. **リトライ機能**: Azure APIは一時的にエラーを返すことがある。azapi_resourceは自動でリトライしてくれる
+2. **柔軟性**: 新しいAPIバージョンにすぐ対応できる
+
+**Level 1-6も同じ構造**:
 
 ```hcl
 resource "azapi_resource" "management_groups_level_1" {
   for_each = local.management_groups_level_1
-  # ... 同じ構造 ...
-  depends_on = [azapi_resource.management_groups_level_0]
+  # ... 同じ内容 ...
+  depends_on = [azapi_resource.management_groups_level_0]  # Level 0を待つ
 }
 
 resource "azapi_resource" "management_groups_level_2" {
   for_each = local.management_groups_level_2
-  # ... 同じ構造 ...
-  depends_on = [azapi_resource.management_groups_level_1]
+  # ... 同じ内容 ...
+  depends_on = [azapi_resource.management_groups_level_1]  # Level 1を待つ
 }
-
-# Level 3, 4, 5, 6も同様...
 ```
 
-### ステップ4: ポリシー定義の作成
+**作成順序**:
+
+```
+1. Level 0を作成（alz）
+   ↓ depends_onで待機
+2. Level 1を作成（platform, landingzones, sandbox）
+   ↓ depends_onで待機
+3. Level 2を作成（management, connectivity, identity, corp, online）
+   ↓ ...
+```
+
+### ステップ5: ポリシー定義を作成する
+
+**目的**: 「Classic VMを禁止」みたいなルールを定義する。
 
 **ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/main.policy_definitions.tf`
 
@@ -1010,262 +1168,149 @@ resource "azapi_resource" "policy_definitions" {
   for_each = local.policy_definitions
 
   name      = each.value.definition.name
-  parent_id = "${coalesce(lookup(var.parent_id_overrides.policy_definitions, each.key, null), "/providers/Microsoft.Management/managementGroups")}/${each.value.mg}"
+  parent_id = "/providers/Microsoft.Management/managementGroups/${each.value.mg}"
   type      = "Microsoft.Authorization/policyDefinitions@2023-04-01"
   body = {
     properties = each.value.definition.properties
   }
   
-  create_headers         = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-  delete_headers         = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-  read_headers           = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-  response_export_values = []
-  
-  retry = var.retries.policy_definitions.error_message_regex != null ? {
-    error_message_regex  = var.retries.policy_definitions.error_message_regex
-    interval_seconds     = lookup(var.retries.policy_definitions, "interval_seconds", null)
-    max_interval_seconds = lookup(var.retries.policy_definitions, "max_interval_seconds", null)
-    multiplier           = lookup(var.retries.policy_definitions, "multiplier", null)
-    randomization_factor = lookup(var.retries.policy_definitions, "randomization_factor", null)
-  } : null
-  
-  schema_validation_enabled = var.schema_validation_enabled.policy_definitions
-  update_headers            = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-
-  timeouts {
-    create = var.timeouts.policy_definition.create
-    delete = var.timeouts.policy_definition.delete
-    read   = var.timeouts.policy_definition.read
-    update = var.timeouts.policy_definition.update
-  }
-
-  depends_on = [
-    time_sleep.after_management_groups,
-  ]
+  depends_on = [time_sleep.after_management_groups]
 }
 ```
 
-**重要なポイント**:
+**このコードを詳しく見る**:
 
-1. **parent_id の構築**
-   ```hcl
-   parent_id = "/providers/Microsoft.Management/managementGroups/${each.value.mg}"
-   ```
-   - ポリシー定義は管理グループに紐づく
-   - 例: `/providers/Microsoft.Management/managementGroups/alz`
+**for_each**: すべてのポリシー定義をループ
 
-2. **depends_on で管理グループ作成を待つ**
-   ```hcl
-   depends_on = [time_sleep.after_management_groups]
-   ```
-   - 管理グループが作成されてから、ポリシー定義を作成
+```hcl
+for_each = local.policy_definitions
+# 例: {
+#   "alz/Deny-Classic-Resources" = {
+#     definition = { name = "Deny-Classic-Resources", properties = {...} }
+#     mg = "alz"
+#   }
+# }
+```
 
-3. **リトライ機能**
-   - ポリシー定義の作成は失敗することがある（結果整合性）
-   - 自動リトライで対処
+**parent_id**: どの管理グループに紐づけるか
 
-### ステップ5: ポリシーセット定義の作成
+```hcl
+parent_id = "/providers/Microsoft.Management/managementGroups/${each.value.mg}"
+# 例: "/providers/Microsoft.Management/managementGroups/alz"
+```
 
-**ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/main.policy_set_definitions.tf`
+**なぜ管理グループに紐づけるのか**: ポリシー定義は管理グループのレベルで作成される。そうすれば、その管理グループと配下の全管理グループで使える。
 
-```hcl title="main.policy_set_definitions.tf"
-resource "azapi_resource" "policy_set_definitions" {
-  for_each = local.policy_set_definitions
+**body**: ポリシーの実際の内容
 
-  name      = each.value.set_definition.name
-  parent_id = "${coalesce(lookup(var.parent_id_overrides.policy_set_definitions, each.key, null), "/providers/Microsoft.Management/managementGroups")}/${each.value.mg}"
-  type      = "Microsoft.Authorization/policySetDefinitions@2023-04-01"
-  body = {
-    properties = each.value.set_definition.properties
-  }
-  
-  create_headers         = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-  delete_headers         = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-  read_headers           = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-  response_export_values = []
-  
-  retry = var.retries.policy_set_definitions.error_message_regex != null ? {
-    error_message_regex  = var.retries.policy_set_definitions.error_message_regex
-    interval_seconds     = lookup(var.retries.policy_set_definitions, "interval_seconds", null)
-    max_interval_seconds = lookup(var.retries.policy_set_definitions, "max_interval_seconds", null)
-    multiplier           = lookup(var.retries.policy_set_definitions, "multiplier", null)
-    randomization_factor = lookup(var.retries.policy_set_definitions, "randomization_factor", null)
-  } : null
-  
-  schema_validation_enabled = var.schema_validation_enabled.policy_set_definitions
-  update_headers            = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-
-  timeouts {
-    create = var.timeouts.policy_set_definition.create
-    delete = var.timeouts.policy_set_definition.delete
-    read   = var.timeouts.policy_set_definition.read
-    update = var.timeouts.policy_set_definition.update
-  }
-
-  depends_on = [
-    time_sleep.after_policy_definitions,
-  ]
+```hcl
+body = {
+  properties = each.value.definition.properties
+  # {
+  #   displayName = "Deny the deployment of classic resources"
+  #   policyType = "Custom"
+  #   mode = "All"
+  #   policyRule = { ... }  # 実際のルール
+  #   parameters = { ... }   # パラメータ定義
+  # }
 }
 ```
 
-**ポリシーセット定義の構造**:
+**depends_on**: 管理グループが作られてから実行
 
-```json
-{
-  "properties": {
-    "displayName": "Enforce encryption at rest with CMK",
-    "policyDefinitions": [
-      {
-        "policyDefinitionId": "/providers/Microsoft.Management/managementGroups/alz/providers/Microsoft.Authorization/policyDefinitions/Deny-Storage-Without-Encryption",
-        "parameters": {}
-      },
-      {
-        "policyDefinitionId": "/providers/Microsoft.Management/managementGroups/alz/providers/Microsoft.Authorization/policyDefinitions/Deny-Sql-Without-Encryption",
-        "parameters": {}
-      }
-    ]
-  }
-}
+```hcl
+depends_on = [time_sleep.after_management_groups]
 ```
 
-### ステップ6: ポリシー割り当ての作成
+**なぜtime_sleepが必要か**: Azure APIは結果整合性モデル。管理グループを作った直後は、まだAzure内部で伝播中。30秒待つことで、確実に管理グループが使えるようになる。
+
+### ステップ6: ポリシー割り当てを作成する
+
+**目的**: 「alz管理グループにこのポリシーを適用」という割り当てを作る。
 
 **ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/main.policy_assignments.tf`
 
-```hcl title="main.policy_assignments.tf"
-resource "terraform_data" "policy_assignments_dependencies" {
-  input = sha256(jsonencode(var.dependencies.policy_assignments))
-}
-
+```hcl title="main.policy_assignments.tf（抜粋）"
 resource "azapi_resource" "policy_assignments" {
   for_each = local.policy_assignments_final
 
   location  = var.location
   name      = each.value.assignment.name
-  parent_id = "${coalesce(lookup(var.parent_id_overrides.policy_assignments, each.key, null), "/providers/Microsoft.Management/managementGroups")}/${each.value.mg}"
+  parent_id = "/providers/Microsoft.Management/managementGroups/${each.value.mg}"
   type      = "Microsoft.Authorization/policyAssignments@2024-04-01"
   body = {
     properties = {
-      description       = lookup(each.value.assignment.properties, "description", null)
-      definitionVersion = lookup(each.value.assignment.properties, "definitionVersion", "1.*.*")
-      displayName       = lookup(each.value.assignment.properties, "displayName", null)
-      enforcementMode   = lookup(each.value.assignment.properties, "enforcementMode", null)
-      metadata = merge(lookup(each.value.assignment.properties, "metadata", {}),
-        {
-          createdBy = ""
-          createdOn = ""
-          updatedBy = ""
-          updatedOn = ""
-        }
-      )
-      nonComplianceMessages = lookup(each.value.assignment.properties, "nonComplianceMessages", null)
-      notScopes             = lookup(each.value.assignment.properties, "notScopes", null)
-      overrides             = lookup(each.value.assignment.properties, "overrides", null)
-      parameters            = lookup(each.value.assignment.properties, "parameters", null)
-      policyDefinitionId    = lookup(each.value.assignment.properties, "policyDefinitionId", null)
-      resourceSelectors     = lookup(each.value.assignment.properties, "resourceSelectors", null)
+      policyDefinitionId = each.value.assignment.properties.policyDefinitionId
+      parameters         = each.value.assignment.properties.parameters
+      enforcementMode    = each.value.assignment.properties.enforcementMode
+      # ...
     }
   }
   
-  create_headers          = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-  delete_headers          = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-  ignore_missing_property = true
-  read_headers            = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-  
-  replace_triggers_external_values = [
-    lookup(each.value.assignment.properties, "policyDefinitionId", null),
-    var.location,
-  ]
-  response_export_values = []
-  
-  retry = var.retries.policy_assignments.error_message_regex != null ? {
-    error_message_regex  = var.retries.policy_assignments.error_message_regex
-    interval_seconds     = lookup(var.retries.policy_assignments, "interval_seconds", null)
-    max_interval_seconds = lookup(var.retries.policy_assignments, "max_interval_seconds", null)
-    multiplier           = lookup(var.retries.policy_assignments, "multiplier", null)
-    randomization_factor = lookup(var.retries.policy_assignments, "randomization_factor", null)
-  } : null
-  
-  schema_validation_enabled = var.schema_validation_enabled.policy_assignments
-  update_headers            = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-
   dynamic "identity" {
-    for_each = lookup(each.value.assignment, "identity", null) != null ? [each.value.assignment.identity] : []
-
+    for_each = each.value.assignment.identity != null ? [each.value.assignment.identity] : []
     content {
-      type         = identity.value.type
-      identity_ids = keys(lookup(identity.value, "userAssignedIdentities", {}))
+      type = identity.value.type
     }
   }
   
-  timeouts {
-    create = var.timeouts.policy_assignment.create
-    delete = var.timeouts.policy_assignment.delete
-    read   = var.timeouts.policy_assignment.read
-    update = var.timeouts.policy_assignment.update
-  }
-
-  depends_on = [
-    time_sleep.after_policy_set_definitions,
-    terraform_data.policy_assignments_dependencies,
-  ]
+  depends_on = [time_sleep.after_policy_set_definitions]
 }
 ```
 
-**重要なポイント**:
+**このコードを詳しく見る**:
 
-1. **location の指定**
-   - ポリシー割り当てにはlocationが必要（マネージドIDの作成先）
+**location**: なぜlocationが必要？
 
-2. **identity ブロック**
-   ```hcl
-   dynamic "identity" {
-     for_each = lookup(each.value.assignment, "identity", null) != null ? [each.value.assignment.identity] : []
-     content {
-       type         = identity.value.type
-       identity_ids = keys(lookup(identity.value, "userAssignedIdentities", {}))
-     }
-   }
-   ```
-   - ポリシーがリソースを作成する場合、マネージドIDが必要
-   - SystemAssigned または UserAssigned
+```hcl
+location = var.location  # "japaneast"
+```
 
-3. **dependencies の明示的な指定**
-   ```hcl
-   depends_on = [
-     time_sleep.after_policy_set_definitions,
-     terraform_data.policy_assignments_dependencies,
-   ]
-   ```
-   - `terraform_data.policy_assignments_dependencies`: 外部リソース（Log Analyticsなど）の作成を待つ
-   - locals.tfで定義した `var.dependencies.policy_assignments`
+ポリシーがリソースを作成する場合（DeployIfNotExistsなど）、マネージドIDが必要。マネージドIDにはlocationが必要。
 
-### ステップ7: ポリシーロール割り当ての作成
+**policyDefinitionId**: どのポリシーを適用するか
 
-ポリシーがリソースを作成する場合、そのマネージドIDに権限を付与する必要があります。
+```hcl
+policyDefinitionId = each.value.assignment.properties.policyDefinitionId
+# 例: "/providers/Microsoft.Management/managementGroups/alz/providers/Microsoft.Authorization/policyDefinitions/Deny-Classic-Resources"
+```
+
+**parameters**: ポリシーのパラメータ
+
+```hcl
+parameters = each.value.assignment.properties.parameters
+# 例: {
+#   "logAnalyticsWorkspaceId" = { "value" = "/subscriptions/.../workspaces/law-001" }
+# }
+```
+
+**identity**: マネージドIDの設定
+
+```hcl
+dynamic "identity" {
+  for_each = each.value.assignment.identity != null ? [each.value.assignment.identity] : []
+  content {
+    type = identity.value.type  # "SystemAssigned"
+  }
+}
+```
+
+**なぜdynamic使うのか**: identityが必要なポリシー（DeployIfNotExists）とそうじゃないポリシー（Deny）があるから。必要な時だけidentityブロックを作る。
+
+### ステップ7: 権限を付与する
+
+**目的**: ポリシーがリソースを作成できるように、権限を付与する。
 
 **ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/main.policy_role_assignments.tf`
 
-```hcl title="main.policy_role_assignments.tf"
-resource "terraform_data" "policy_role_assignments_dependencies" {
-  input = sha256(jsonencode(var.dependencies.policy_role_assignments))
-}
+**なぜ権限が必要なのか**: 
 
-data "azapi_resource" "policy_user_assigned_identities" {
-  for_each = local.policy_assignments_user_assigned_identity
+例えば「VMにLog Analyticsエージェントを自動インストール」というポリシーがある。これを実行するには：
 
-  resource_id = each.value[0]
-  type        = "Microsoft.ManagedIdentity/userAssignedIdentities@2023-01-31"
-  response_export_values = [
-    "properties.principalId",
-  ]
+1. ポリシーがマネージドIDを持つ
+2. そのマネージドIDに「VMの拡張機能をインストールする権限」が必要
 
-  depends_on = [
-    terraform_data.policy_role_assignments_dependencies,
-    terraform_data.policy_assignments_dependencies,
-  ]
-}
-
+```hcl title="main.policy_role_assignments.tf（抜粋）"
 resource "azapi_resource" "policy_role_assignments" {
   for_each = local.policy_role_assignments
 
@@ -1276,192 +1321,94 @@ resource "azapi_resource" "policy_role_assignments" {
     properties = {
       principalId      = each.value.principal_id
       roleDefinitionId = each.value.role_definition_id
-      description      = "Created by ALZ Terraform provider. Assignment required for Azure Policy."
     }
   }
   
-  create_headers         = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-  delete_headers         = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-  read_headers           = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-  response_export_values = []
-  
-  retry = var.retries.policy_role_assignments.error_message_regex != null ? {
-    error_message_regex  = var.retries.policy_role_assignments.error_message_regex
-    interval_seconds     = lookup(var.retries.policy_role_assignments, "interval_seconds", null)
-    max_interval_seconds = lookup(var.retries.policy_role_assignments, "max_interval_seconds", null)
-    multiplier           = lookup(var.retries.policy_role_assignments, "multiplier", null)
-    randomization_factor = lookup(var.retries.policy_role_assignments, "randomization_factor", null)
-  } : null
-  
-  schema_validation_enabled = var.schema_validation_enabled.role_assignments
-  update_headers            = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
-
-  timeouts {
-    create = var.timeouts.policy_role_assignment.create
-    delete = var.timeouts.policy_role_assignment.delete
-    read   = var.timeouts.policy_role_assignment.read
-    update = var.timeouts.policy_role_assignment.update
-  }
-
   depends_on = [terraform_data.policy_role_assignments_dependencies]
-
-  lifecycle {
-    ignore_changes = [output.properties.updatedOn]
-  }
 }
 ```
 
-**ロール割り当ての自動生成**:
+**このコードを詳しく見る**:
 
-公式モジュールは、ポリシー定義のメタデータを読み取って、必要なロール割り当てを自動的に作成します。
+**principalId**: 誰に権限を付与するか
 
-**例：ポリシー定義のメタデータ**
+```hcl
+principalId = each.value.principal_id
+# ポリシー割り当てのマネージドIDのprincipal_id
+```
+
+**roleDefinitionId**: どの権限を付与するか
+
+```hcl
+roleDefinitionId = each.value.role_definition_id
+# 例: "/providers/microsoft.authorization/roleDefinitions/92aaf0da-9dab-42b6-94a3-d43ce8d16293"
+# これは「Log Analytics Contributor」ロール
+```
+
+**scope**: どこに対する権限か
+
+```hcl
+parent_id = each.value.scope
+# 例: "/subscriptions/12345678-1234-1234-1234-123456789012"
+# サブスクリプション全体に対する権限
+```
+
+**どうやって自動的に権限が決まるのか**:
+
+ポリシー定義の中に、必要な権限が書いてある：
 
 ```json
 {
-  "name": "Deploy-Log-Analytics-Agent",
-  "properties": {
-    "parameters": {
-      "logAnalytics": {
-        "type": "String",
-        "metadata": {
-          "assignPermissions": true,
-          "description": "Log Analytics workspace"
-        }
-      }
-    },
-    "policyRule": {
-      "if": {
-        "field": "type",
-        "equals": "Microsoft.Compute/virtualMachines"
-      },
-      "then": {
-        "effect": "deployIfNotExists",
-        "details": {
-          "type": "Microsoft.Compute/virtualMachines/extensions",
-          "roleDefinitionIds": [
-            "/providers/microsoft.authorization/roleDefinitions/92aaf0da-9dab-42b6-94a3-d43ce8d16293"
-          ]
-        }
+  "policyRule": {
+    "then": {
+      "effect": "deployIfNotExists",
+      "details": {
+        "roleDefinitionIds": [
+          "/providers/microsoft.authorization/roleDefinitions/92aaf0da-9dab-42b6-94a3-d43ce8d16293"
+        ]
       }
     }
   }
 }
 ```
 
-**assignPermissions が true の場合**:
+公式モジュールはこれを読み取って、自動的にロール割り当てを作成する。
 
-- `roleDefinitionIds` に記載されたロールを自動的に付与
-- スコープ: ポリシーパラメータで指定されたリソース（Log Analyticsワークスペースなど）
-
-**locals.tfでのロール割り当て生成**:
-
-```hcl
-locals {
-  policy_role_assignments = data.alz_architecture.this.policy_role_assignments != null ? {
-    for pra in data.alz_architecture.this.policy_role_assignments : uuidv5("url", "${pra.policy_assignment_name}${pra.scope}${pra.management_group_id}${pra.role_definition_id}") => {
-      principal_id       = lookup(local.policy_assignment_identities, "${pra.management_group_id}/${pra.policy_assignment_name}", tostring(null))
-      role_definition_id = startswith(lower(pra.scope), "/subscriptions") ? "/subscriptions/${split("/", pra.scope)[2]}${pra.role_definition_id}" : pra.role_definition_id
-      scope              = pra.scope
-    } if !strcontains(pra.scope, "00000000-0000-0000-0000-000000000000")
-  } : {}
-}
-```
-
-### ステップ8: マネージドIDの principal_id 取得
-
-**ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/locals.tf`
-
-```hcl
-locals {
-  policy_assignment_identities = {
-    for k, v in azapi_resource.policy_assignments : k => contains(keys(data.azapi_resource.policy_user_assigned_identities), k) ? data.azapi_resource.policy_user_assigned_identities[k].output.properties.principalId : try(v.identity[0].principal_id, tostring(null))
-  }
-}
-```
-
-**この処理が何をしているか**:
-
-1. **SystemAssigned の場合**
-   - `azapi_resource.policy_assignments.identity[0].principal_id` から取得
-
-2. **UserAssigned の場合**
-   - `data.azapi_resource.policy_user_assigned_identities` から取得
-   - 別途作成されたマネージドIDのprincipal_idを取得
-
-### 処理の全体フロー
+### まとめ：全体の流れ
 
 ```
-1. data.alz_architecture でYAML読み込み
-   ↓
-2. locals.tf でデータ変換
-   ├─ management_groups をレベル別に分類
-   ├─ policy_definitions をマップに変換
-   ├─ policy_set_definitions をマップに変換
-   ├─ policy_assignments をマップに変換
-   └─ policy_role_assignments を生成
-   ↓
-3. 管理グループ作成（Level 0 → 6）
-   ↓
-4. ポリシー定義作成
-   ↓
-5. ポリシーセット定義作成
-   ↓
-6. ポリシー割り当て作成（マネージドID付き）
-   ↓
-7. ポリシーロール割り当て作成
+1. YAMLファイル読み込み（main.tf）
+   ↓ data.alz_architecture.this に全データ格納
+   
+2. データ整理（locals.tf）
+   ↓ management_groups_level_0-6 に分類
+   ↓ policy_definitions をフラット化
+   
+3. 管理グループ作成（main.management_groups.tf）
+   ↓ Level 0 → Level 1 → ... の順
+   
+4. 30秒待機（time_sleep）
+   ↓ Azure内部での伝播を待つ
+   
+5. ポリシー定義作成（main.policy_definitions.tf）
+   ↓ 各管理グループにポリシー定義を作成
+   
+6. ポリシーセット定義作成（main.policy_set_definitions.tf）
+   ↓ 複数のポリシーをまとめる
+   
+7. ポリシー割り当て作成（main.policy_assignments.tf）
+   ↓ マネージドID付きで割り当て
+   
+8. ロール割り当て作成（main.policy_role_assignments.tf）
+   ↓ ポリシーに必要な権限を付与
 ```
 
-### time_sleep リソースによる待機
+**公式モジュールの賢いところ**:
 
-**ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/main.tf`
-
-```hcl
-resource "time_sleep" "after_management_groups" {
-  create_duration = "30s"
-
-  depends_on = [
-    azapi_resource.management_groups_level_0,
-    azapi_resource.management_groups_level_1,
-    azapi_resource.management_groups_level_2,
-    azapi_resource.management_groups_level_3,
-    azapi_resource.management_groups_level_4,
-    azapi_resource.management_groups_level_5,
-    azapi_resource.management_groups_level_6,
-  ]
-
-  triggers = {
-    management_groups = sha256(jsonencode({
-      for k, v in local.management_groups : k => v.id
-    }))
-  }
-}
-```
-
-**なぜ待機が必要か？**
-
-Azure APIは結果整合性モデルです。
-
-- 管理グループを作成後、すぐにGETできないことがある
-- 30秒待機することで、Azure内部での伝播を待つ
-
-### 公式モジュールの設計思想
-
-1. **冪等性の確保**
-   - 何度実行しても同じ結果になる
-   - リトライ機能で一時的なエラーを吸収
-
-2. **依存関係の明示**
-   - `depends_on` で順序を制御
-   - `terraform_data` で外部依存関係を追跡
-
-3. **柔軟なカスタマイズ**
-   - `policy_assignments_to_modify` でポリシーパラメータを上書き
-   - `policy_default_values` でデフォルト値を設定
-
-4. **自動化**
-   - ロール割り当ての自動生成
-   - メタデータに基づく処理
+1. **自動化**: ポリシー定義を見て、必要な権限を自動で付与
+2. **順序管理**: depends_onで確実に順番通り作成
+3. **エラー対策**: リトライ機能、time_sleepで確実性を担保
+4. **柔軟性**: policy_assignments_to_modifyで簡単にカスタマイズ可能
 
 ---
 
